fix: fixed layout issues

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,6 +1,11 @@
 .lang-bar {
     width: 100%;
 }
+
+.container {
+	margin-top: 8rem;
+}
+
 .card {
     margin-bottom: 0;
     border: none;
@@ -20,6 +25,7 @@
 	width: 100%;
 	background-color: #20a8d8;
 	padding: 8px;
+	z-index: 9;
 
 	@media screen and (min-width: 991px) {
 		display: none;
@@ -34,34 +40,26 @@
 }
 
 .mobile-label {
-	position: fixed;
-	width: 100%;
-	bottom: 60px;
+	margin-top: 1.5rem;
+
+	@media screen and (min-width: 991px) {
+		display: none;
+	}
+}
+
+.mobile-label {
+	a {
+		display: block;
+		text-align: center;
+		font-size: 12px;
+		margin-bottom: 10px;
+	}
 	
-	@media screen and (min-width: 991px) {
-		display: none;
+
+	span {
+		display: block;
+		text-align: center;
+		color: #676d74;
+		font-size: 10px;
 	}
-}
-
-.mobile-label a {
-	display: block;
-	text-align: center;
-	font-size: 12px;
-}
-
-.mobile-copyright {
-	position: fixed;
-	width: 100%;
-	bottom: 20px;
-
-	@media screen and (min-width: 991px) {
-		display: none;
-	}
-}
-
-.mobile-copyright span {
-	display: block;
-	text-align: center;
-	font-size: 11px;
-	color: #989fa1;
 }
