--- a/src/app/pages/payment-status/payment-status.component.scss
+++ b/src/app/pages/payment-status/payment-status.component.scss
@@ -12,10 +12,10 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 40px 0px;
+	padding-top: 10rem;
 
 	@media screen and (max-width: 480px) {
-		padding: 0px 0.6rem;
+		padding-top: 6rem;
 	}
 }
 
