--- a/src/scss/core/_grid.scss
+++ b/src/scss/core/_grid.scss
@@ -12,4 +12,8 @@
 
 .main .container-fluid {
   padding: 0 30px;
+
+	@media screen and (max-width: 480px) {
+		padding: 0 16px;
+	}
 }
